product page start up

--- a/application/modules/default/views/scripts/product/index-new.phtml
+++ b/application/modules/default/views/scripts/product/index-new.phtml
@@ -105,6 +105,6 @@ $this->headLink()->appendStylesheet('/theme/react/assets/css/style.css');
 
 <script type="text/javascript">
   var view = "product";
-   var productJson = <?php echo $this->productJson ?>;
+  var product = <?php echo $this->productJson ?>;
 </script>
 <script type="text/javascript" src="/theme/react/all.js"></script>
