--- a/application/modules/default/views/scripts/product/index-new.phtml
+++ b/application/modules/default/views/scripts/product/index-new.phtml
@@ -81,6 +81,14 @@ var likeJson =<?php echo $this->likeJson ?>;
 var projectplingsJson =<?php echo $this->projectplingsJson ?>;
 var ratingOfUserJson =<?php echo $this->ratingOfUserJson ?>;
 var galleryPicturesJson = <?php echo $this->galleryPicturesJson ?>;
+var commentsJson = <?php echo $this->commentsJson ?>;
+var originsJson = <?php echo $this->originsJson ?>;
+var relatedJson = <?php echo $this->relatedJson ?>;
+var moreProductsJson = <?php echo $this->moreProductsJson ?>;
+var moreProductsOfOtherUsrJson = <?php echo $this->moreProductsOfOtherUsrJson ?>;
+
+
+
 
 </script>
 <script type="text/javascript" src="/theme/react/all.js"></script>
