product page layout

--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -644,7 +644,13 @@ header div.container.header {
         a {
           height: 30px;
           display: block;
+          float: left;
+          position: relative;
+
           span {
+            display: block;
+            float: left;
+            height: 30px;
             font-size: 15px;
             font-weight: 500;
           }
@@ -655,9 +661,7 @@ header div.container.header {
         }
 
         a.user {
-          display: block;
-          float: left;
-          position: relative;
+
           padding-left: 40px;
 
           span.avatar {
