--- a/application/modules/default/views/scripts/product/index-new.phtml
+++ b/application/modules/default/views/scripts/product/index-new.phtml
@@ -73,23 +73,20 @@ $this->headLink()->appendStylesheet('/theme/react/assets/css/style.css');
 
 <script type="text/javascript">
 var view = "product";
-var productJson = <?php echo $this->productJson ?>;  // product info. title, category, image ...
+var product = <?php echo $this->productJson ?>;  // product info. title, category, image ...
 var updatesJson = <?php echo $this->updatesJson ?>; // Tab changelogs
 var ratingsJson = <?php echo $this->ratingsJson ?>; //  Tab Ratings & Reviews
 var ratingOfUserJson = <?php echo $this->ratingOfUserJson ?>;  // Rating of user if exist
-
 var likeJson = <?php echo $this->likeJson ?>;    // Tab Favs
 var projectplingsJson = <?php echo $this->projectplingsJson ?>; // Tab Plings
-
 var galleryPicturesJson = <?php echo $this->galleryPicturesJson ?>;
+
 var originsJson = <?php echo $this->originsJson ?>; // rightsidebar origins products = Based on
 var relatedJson = <?php echo $this->relatedJson ?>;// rightsidebar Variants
 var moreProductsJson = <?php echo $this->moreProductsJson ?>; // rightsidebar more proudcts of category
 var moreProductsOfOtherUsrJson = <?php echo $this->moreProductsOfOtherUsrJson ?>; // rightsidebar more products of user
-
 var tagsuserJson = <?php echo $this->tagsuserJson ?>;  // user tags
 var tagssystemJson = <?php echo $this->tagssystemJson ?>;  // rightsidebar bottom system tags
-
 var commentsJson = <?php echo $this->commentsJson ?>; // comments  TODO Paging
 var filesCntJson = <?php echo $this->filesCntJson ?>;   // Tab( active files cnt )
 var filesJson  = <?php echo $this->filesJson ?>;  // Tab files
