--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -874,6 +874,99 @@ header div.container.header {
       }
     }
   }
+
+  #product-view-content-container {
+    #files-tab {
+      table {
+        thead, tbody {
+          tr {
+            th, td {
+              text-align: left;
+              font-size: 13px;
+              font-weight: 500;
+              padding: 12px 16px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  #product-comments-container {
+    .comment-list {
+      height: auto;
+      float: left;
+      width: 100%;
+
+      h3 {
+        margin-bottom: 15px;
+      }
+
+      .comment-item {
+        width: 100%;
+        padding-left: 80px;
+        position: relative;
+        float: left;
+        margin-bottom: 10px;
+        font-size: 14px;
+        min-height: 60px;
+
+        .comment-user-avatar {
+          width: 60px;
+          position: absolute;
+          left: 0;
+          top: 0;
+          height: 60px;
+
+          .is-supporter-display {
+            color: white;
+            position: absolute;
+            bottom: 0;
+            left: 0px;
+            display: block;
+            width: 25px;
+            height: 25px;
+            background-color: #EE6E09;
+            text-align: center;
+            line-height: 25px;
+            border-radius: 100%;
+          }
+
+          img {
+            width: 60px;
+            height: 60px;
+            border-radius: 100%;
+          }
+        }
+
+        .comment-item-content {
+          width: 100%;
+          float: left;
+          min-height: 60px;
+          margin-bottom: 10px;
+
+          .comment-item-header, .comment-item-text {
+            width: 100%;
+          }
+
+          .comment-item-header {
+            border-bottom: 1px dashed #ccc;
+
+            a.comment-username {
+              font-weight: 500;
+            }
+
+            span.comment-created-at {
+              position: absolute;
+              display: block;
+              right: 0;
+              top:0;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 1720px) and (min-width:1501px) {
