react prepare authmember

--- a/application/modules/default/views/scripts/product/index-new.phtml
+++ b/application/modules/default/views/scripts/product/index-new.phtml
@@ -90,5 +90,7 @@ var tagssystemJson = <?php echo $this->tagssystemJson ?>;  // rightsidebar botto
 var commentsJson = <?php echo $this->commentsJson ?>; // comments  TODO Paging
 var filesCntJson = <?php echo $this->filesCntJson ?>;   // Tab( active files cnt )
 var filesJson  = <?php echo $this->filesJson ?>;  // Tab files
+
+var authMemberJson = <?php echo $this->authMemberJson ?>;  // authMember
 </script>
 <script type="text/javascript" src="/theme/react/all.js"></script>
