--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -138,8 +138,7 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
 <?php $this->inlineScript()->appendScript(
     '    $(document).ready(function(){
                 MenuHover.setup();
-                AboutContent.setup();      
-                PlinglistContent.setup();        
+                Popuppanel.setup();                    
                 LoginContainer.update();
                 PlingsRedirect.setup();
             });
