product page small fixes post gallery

--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -1064,6 +1064,8 @@ header div.container.header {
   }
 
   #product-view-content-container {
+    padding: 0;
+
     #files-tab {
       table {
         thead, tbody {
@@ -1075,6 +1077,15 @@ header div.container.header {
               padding: 12px 8px;
             }
           }
+        }
+      }
+    }
+
+    #ratings-tab {
+      .ratings-filters-menu {
+        margin-bottom: 25px;
+        .btn-container + .btn-container {
+          margin-left: 10px;
         }
       }
     }
