--- a/application/modules/default/views/layout/static_content.phtml
+++ b/application/modules/default/views/layout/static_content.phtml
@@ -40,7 +40,7 @@
     $domainconfig = Zend_Registry::isRegistered('store_config') ? Zend_Registry::get('store_config') : null;
     if($domainconfig)
     {
-        $googleid = $domainconfig['google_id'];
+        $googleid = $domainconfig->google_id;
     }
     ?>
     <script>
@@ -66,7 +66,7 @@
     $piwikid ='1';
     if($domainconfig)
     {
-        $piwikid = $domainconfig['piwik_id'];
+        $piwikid = $domainconfig->piwik_id;
     }
     ?>
     <script type="text/javascript">
