filedownload table with download links, md5 hash generation

--- a/application/modules/default/views/scripts/product/index-new.phtml
+++ b/application/modules/default/views/scripts/product/index-new.phtml
@@ -70,6 +70,7 @@ $this->headLink()->appendStylesheet('/theme/react/assets/css/style.css');
 <script type="text/javascript" src="/theme/react/lib/redux/react-redux.min.js"></script>
 <script type="text/javascript" src="/theme/react/lib/mdl/material.min.js"></script>
 <script type="text/javascript" src="/theme/react/lib/timeago/timeago.min.js"></script>
+<script type="text/javascript" src="/theme/react/lib/md5/md5.js"></script>
 
 <script type="text/javascript">
 var view = "product";
@@ -91,6 +92,6 @@ var commentsJson = <?php echo $this->commentsJson ?>; // comments  TODO Paging
 var filesCntJson = <?php echo $this->filesCntJson ?>;   // Tab( active files cnt )
 var filesJson  = <?php echo $this->filesJson ?>;  // Tab files
 
-var authMemberJson = <?php echo $this->authMemberJson ?>;  // authMember
+var authMemberJson = <?php echo $this->authMemberJson ?>  // authMember
 </script>
 <script type="text/javascript" src="/theme/react/all.js"></script>
