--- a/application/modules/default/views/layout/layout_appimagehub_home.phtml
+++ b/application/modules/default/views/layout/layout_appimagehub_home.phtml
@@ -26,10 +26,7 @@
     <?php echo $this->render('partials/htmlheader.phtml'); ?>
 
     <link rel="SHORTCUT ICON" href="<?=$this->template['favicon']?>"/>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="alternate" type="application/rss+xml" title="Latest Products" href="/content.rdf"/>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <!-- Loading Bootstrap -->
     <link rel="stylesheet" href="/theme/flatui/css/bootstrap/bootstrap.min.css" type="text/css"  crossorigin="anonymous">
     <link rel="stylesheet" href="/tools/fancybox2.1.4/jquery.fancybox.css?v=2.1.4" type="text/css" media="screen" />    
@@ -41,10 +38,24 @@
     <link href="/theme/flatui/css/stylesheet.css?<?= APPLICATION_VERSION ?>" rel="stylesheet">
     <link href="/theme/flatui/css/explore_index.css" rel="stylesheet">
     <link href="/theme/flatui/css/startpage.css" rel="stylesheet">
-    <!-- third party -->
-    <link href="/theme/flatui/css/fontawsome/font-awesome.min.css" rel="stylesheet" crossorigin="anonymous">
-    <script src="/theme/flatui/js/lib/jquery-3.2.1.min.js" ></script>
-    <script type="text/javascript" src="/theme/flatui/js/lib/tooltipster/dist/js/tooltipster.bundle.min.js"></script>
+
+
+    
+    <link rel="alternate" type="application/rss+xml" title="Latest Products" href="/content.rdf"/>    
+    <link href="/theme/flatui/css/explore_index.css" rel="stylesheet">
+    <link href="/theme/react/lib/mdl/material.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,500" rel="stylesheet">
+    <link href="/theme/react/assets/css/style.css" rel="stylesheet">
+
+    <script type="text/javascript" src="/theme/react/lib/react/react.js"></script>
+    <script type="text/javascript" src="/theme/react/lib/react-dom/react-dom.js"></script>
+    <script type="text/javascript" src="/theme/react/lib/redux/redux.min.js"></script>
+    <script type="text/javascript" src="/theme/react/lib/redux/react-redux.min.js"></script>
+    <script type="text/javascript" src="/theme/react/lib/mdl/material.min.js"></script>
+    <script type="text/javascript" src="/theme/react/lib/timeago/timeago.min.js"></script>
+
+
 </head>
 <body>
 <div>
@@ -60,11 +71,7 @@
     <div id="error"></div>
 </div>
 
-<script src="/theme/flatui/js/lib/bootstrap.min.js" crossorigin="anonymous"></script>
-<script src="/theme/flatui/js/lib/moment.min.js"></script>
-<script src="/tools/md5.js"></script>
-<script src="/theme/flatui/js/script.js?<?= APPLICATION_VERSION ?>"></script>
-<script type="text/javascript" src="/tools/fancybox2.1.4/jquery.fancybox.pack.js?v=2.1.4"></script> 
+<script src="/theme/flatui/js/lib/jquery-3.2.1.min.js" ></script>
 
 <?php
 echo $this->render('partials/propagateLogin.phtml');
@@ -72,6 +79,9 @@ echo $this->render('partials/propagateLogout.phtml');
 ?>
 
 <?=$this->inlineScript() ?>
+
+<script type="text/javascript" src="/theme/react/all.js"></script>
+
 
 <?php if (APPLICATION_ENV != 'development') { ?>
     <?php
