--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -392,6 +392,15 @@ table {
     }
 
 
+    h1 {
+      width: 100%;
+      margin-top: 0;
+      font-weight: 300;
+      color: black !important;
+      font-size: 24px;
+      margin-bottom: 15px;      
+    }
+
     h2 {
       padding-bottom: 0;
       font-size: 40px;
